--- a/hr_management_system/device/templates/devices.html
+++ b/hr_management_system/device/templates/devices.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Information Form</title>
+<html>
+    <head>
+        <title>Device info</title>
+  
     <style>
-       
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0; 
@@ -73,41 +70,18 @@
         }
     </style>
 </head>
-<body>
-    <form action="#" method="post">
-        <h2>User Information Form</h2> <br>
+    <body>
+        <form action="#" method="post">
+            <h2>Device Details</h2> <br>
+    
+        <lable for="name">Device Name:</lable>
+        <input type="text" id="name" name="name" required><br>
 
-        <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="firstname" required><br>
+        <lable for="type">Device Type :</lable>
+        <imput type="text" id="type" name="type" required ><br>
+            
+            <input type="submit" value="Submit">
 
-        <label for="lastname">Last Name:</label>
-        <input type="text" id="lastname" name="lastname" required><br>
+    </body>
 
-        <label for="phone">Phone:</label>
-        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-7890" required><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br>
-
-        <label for="employee">Employee Code:</label>
-        <input type="text" id="employee" name="employee" required><br>
-
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address" required><br>
-
-        <label for="role">Role:</label>
-        <input type="text" id="role" name="role" required><br>
-
-        <label for="device">Device:</label>
-        <input type="text" id="device" name="device" required><br>
-
-        <label for="department">Department:</label>
-        <input type="text" id="department" name="department" required><br>
-
-        <label for="office">Office:</label>
-        <input type="text" id="office" name="office" required><br>
-
-        <input type="submit" value="Submit">
-    </form>
-</body>
 </html>
